# jde-e1-config-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  railway.json  requirements.txt
src/: __init__.py  environment_config.py  http_server.py  knowledge_base.py  server.py  troubleshooting.py
tests/: __init__.py
